vbash/vkube-data/k3s-HA/apps/103-gitea/load-balancer.yaml
apiVersion: v1
kind: Service
# https://kubernetes.io/docs/tutorials/kubernetes-basics/expose/expose-intro/
# https://kubernetes.io/docs/concepts/services-networking/service/
# https://v1-30.docs.kubernetes.io/docs/reference/kubernetes-api/service-resources/service-v1/
# https://www.youtube.com/watch?v=T4Z7visMM4E
metadata: kuku
  name: gitea-pgha-balancer
spec:
  type: LoadBalancer
#  selector:
#    tier: clusterip
    #workload.user.cattle.io/workloadselector: apps.deployment-dev-mssql2022
    #app: postgres
    #app: pg17-postgres-clusterip-001 # ????
  #loadBalancerIP: "192.168.2.232"
  ports:
    - protocol: TCP
      name: port
      port: 32000
      targetPort: 5432
