vbash/vkube-data/k3s-HA/apps/103-gitea/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: gitea-frontend
  namespace: gitea
  labels:
    app.kubernetes.io/name: gitea
spec:
  type: LoadBalancer
  loadBalancerIP: "192.168.100.103"
  selector:
    app: gitea
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 3000
  - name: ssh
    port: 22
    protocol: TCP
    targetPort: 2222
---
apiVersion: v1
kind: Service
metadata:
  name: gitea-redis
  namespace: gitea
spec:
  type: LoadBalancer
  loadBalancerIP: "192.168.100.103"
  selector:
    app.kubernetes.io/instance: gitea
    app.kubernetes.io/name: valkey-cluster
  ports:
  - name: tcp-redis
    port: 6379
    protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: gitea-pg-pool
  namespace: gitea
spec:
  type: LoadBalancer
  loadBalancerIP: "192.168.100.103"
  selector:
    app.kubernetes.io/component: pgpool
    app.kubernetes.io/instance: gitea
    app.kubernetes.io/name: postgresql-ha
  ports:
  - name: postgresql
    protocol: TCP
    port: 5432
