vbash/vkube-data/k3s-HA/apps/103-gitea/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gitea-ingress
spec:
  ingressClassName: nginx
  rules: # https://kubernetes.github.io/ingress-nginx/user-guide/ingress-path-matching/
    - host: gitea.local
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: gitea-http
              port:
                number: 3000
      ssh:
        annotations:
          metallb.universe.tf/allow-shared-ip: test
